# meeting-transcriber

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/recordings/: 2026-07-07_200111_mic.wav.json  2026-07-07_200111_sys.wav.json  2026-07-07_200223_mic.wav.json  2026-07-07_200556_mic.wav.json
src-tauri/src/: audio.rs  export.rs  lib.rs  main.rs  summary.rs  whisper.rs
src/components/core/: disclosure.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx
