[package]
name = "meeting-transcriber"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
anyhow = "1"
parking_lot = "0.12"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[lib]
name = "meeting_transcriber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
